--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^2.9.4",
     "chartjs-plugin-datalabels": "^0.7.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.10",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
